welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: not found: value compteur
var i:Boolean=compteur 
              ^